# tournament-cli

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  tournament-cli.spec
.github/workflows/: build.yml  ci.yml  test.yml
img/: export.md
tests/: __init__.py  conftest.py  test_cli.py  test_display.py  test_export.py  test_matchmaking.py  test_models.py  test_storage.py
tournament_cli/: __init__.py  cli.py  display.py  export.py  matchmaking.py  models.py  storage.py  tui.py
